--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -22,6 +22,14 @@ publishing {
                 password = System.getenv("MAVEN_PASSWORD")
             }
         }
+        maven {
+            name = "GitHubPackages"
+            url = "https://maven.pkg.github.com/octocat/hello-world"
+            credentials {
+                username = System.getenv("GITHUB_ACTOR")
+                password = System.getenv("GITHUB_TOKEN")
+            }
+        }
     }
 }
 
